# 8086_emulator

./: .gitignore  .gitmodules  8086_emulator.sln  CMakeLists.txt  README.md
8086_emulator/: 8086_emulator.vcxproj  8086_emulator.vcxproj.filters  Main.cpp
8086_emulator/include/: m8086.hpp
8086_emulator_test/: 8086TestFixture.hpp  8086_ADD.cpp  8086_emulator_test.vcxproj  8086_emulator_test.vcxproj.filters  SetRegisterTest.cpp  m8086Test.cpp
8086_emulator_test/ADD/ADD_Eb_Gv/: ADD2BytesMemReg.cpp  ADD2BytesMemReg8BitDisplacement.cpp  ADD2BytesRegReg.cpp
include/: m8086.hpp
lib/: CMakeLists.txt
lib/include/: 8086.hpp  FlagMasks.hpp  Memory.hpp  ModRmByte.hpp  Processor.hpp  ProcessorFlags.hpp  Registers.hpp  primitives.hpp
lib/src/: 8086.cpp  Memory.cpp  Processor.cpp
src/: 8086.cpp
test/: 8086Test.cpp  8086TestFixture.hpp  8086_ModRMByte.cpp  CMakeLists.txt  CheckParityTest.cpp  GeneralPurposeRegistersTest.cpp  GetRegisterTest.cpp  ModRMByte.cpp  ModRmByteTest.cpp  ProcessorFlagsTest.cpp  SetRegisterTest.cpp  m8086Test.cpp
test/ADD/ADD_Eb_Gv/: ADD2BytesMemReg16BitDisplacement.cpp  ADD2BytesMemReg8BitDisplacement.cpp  ADD2BytesMemRegDirectAddressingMode.cpp  ADD2BytesMemRegNoDisplacement.cpp  ADD2BytesRegReg.cpp
test/include/: 8086TestFixture.hpp  ProcessorTestFixture.hpp
